# crabtalk

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.claude/: settings.json
.github/workflows/: docker.yml  main.yml
api/: index.html
crates/bench/: Cargo.toml  Dockerfile  README.md  bench.py  bench.sh  chart.py  compare.sh  docker-compose.yml  run.sh
crates/bench/config/: bench-docker.toml  bifrost.json  litellm.yaml
crates/core/: Cargo.toml
crates/core/src/: config.rs  convert.rs  lib.rs  model_info.rs  provider.rs  storage_sqlite.rs
crates/core/src/types/: anthropic.rs  chat.rs  mod.rs  model.rs
crates/core/src/types/gemini/: mod.rs  request.rs  response.rs
crates/core/src/types/openai/: mod.rs  request.rs  response.rs  stream.rs
crates/crabctl/: Cargo.toml
crates/crabctl/src/: client.rs  config.rs  types.rs
crates/crabllm/: Cargo.toml  README.md
crates/crabllm-llamacpp/: Cargo.toml
crates/crabllm-llamacpp/src/: lib.rs  provider.rs
crates/crabtalk/: Cargo.toml
crates/llamacpp/: Cargo.toml
crates/llamacpp/src/: download.rs  lib.rs  provider.rs  server.rs
crates/llamars/: Cargo.toml
crates/llamars/src/: download.rs  lib.rs  registry.rs
crates/mlx/: Cargo.toml  build.rs
crates/mlx/examples/: chat.rs  tool_capability.rs  vlm_smoke.rs
crates/mlx/src/: download.rs  ffi.rs  gemma_patch.rs  lib.rs  pool.rs  provider.rs  registry.rs  session.rs  stub.rs
crates/mlx/tests/: download_smoke.rs  session_smoke.rs
crates/provider/: Cargo.toml
crates/provider/src/: client.rs  lib.rs  registry.rs
crates/provider/src/client/: hyper.rs  mod.rs  reqwest.rs
crates/provider/src/provider/: anthropic.rs  azure.rs  bedrock.rs  deepseek.rs  google.rs  mod.rs  openai.rs  schema.rs
crates/proxy/: Cargo.toml  README.md
crates/proxy/src/: admin.rs  admin_models.rs  admin_providers.rs  auth.rs  handlers.rs  lib.rs  openapi.rs  state.rs
crates/proxy/src/anthropic/: handler.rs  mod.rs  sse.rs  translate.rs
crates/proxy/src/ext/: audit.rs  budget.rs  cache.rs  logging.rs  mod.rs  rate_limit.rs  usage.rs
crates/proxy/src/gemini/: handler.rs  mod.rs
crates/proxy/src/storage/: mod.rs  redis.rs  sqlite.rs
crates/proxy/tests/: usage_events.rs
docker/: bench-runner.Dockerfile
docs/: book.toml
docs/src/: architecture.md  benchmarks.md  configuration.md  docker.md  getting-started.md  introduction.md
docs/src/features/: auth.md  routing.md  storage.md  streaming.md
docs/src/providers/: anthropic.md  azure.md  bedrock.md  ollama.md  overview.md
mlx/: Makefile  Package.swift
mlx/Sources/CrabllmMlx/: MessageParsing.swift  Pool.swift  Session.swift
mlx/include/: crabllm_mlx.h
mlx/tests/: smoke.c
models/: cloud.toml  local.toml
scripts/: update_cloud_models.py  update_local_models.py
