[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance LLM API gateway"
repository = "https://github.com/clearloop/crabtalk"
keywords = ["llm", "gateway", "proxy", "openai"]
categories = ["web-programming::http-server"]

[workspace.dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
