[package]
name = "crabtalk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
storage-sqlite = ["rusqlite"]

[dependencies]
# crates-io
axum.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

# optional
rusqlite = { workspace = true, optional = true }
