[package]
name = "crabllm-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Provider dispatch for the crabllm LLM API gateway"
keywords = ["llm", "openai", "anthropic", "gemini", "bedrock"]
categories = ["web-programming::http-client", "network-programming"]

[features]
native-tls = []
rustls = []
provider-bedrock = ["hmac", "sha2"]

[dependencies]
crabllm-core.workspace = true

# crates-io
bytes.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sonic-rs.workspace = true
tokio.workspace = true

# optional (bedrock)
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
