[package]
name = "crabllm-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Provider dispatch for the crabllm LLM API gateway"
keywords = ["llm", "openai", "anthropic", "gemini", "bedrock"]
categories = ["web-programming::http-client", "network-programming"]

[features]
default = ["hyper", "native-tls", "http2"]
hyper = ["dep:hyper", "dep:hyper-util", "dep:http", "dep:http-body-util"]
reqwest = ["dep:reqwest"]
http2 = [
    "hyper?/http2",
    "hyper-util?/http2",
    "hyper-rustls?/http2",
    "reqwest?/http2",
]
native-tls = ["dep:hyper-tls", "dep:native-tls", "reqwest?/native-tls"]
rustls = ["dep:hyper-rustls", "reqwest?/rustls"]
sonic = ["crabllm-core/sonic"]
provider-bedrock = ["hmac", "sha2"]

[dependencies]
crabllm-core.workspace = true

# crates-io
bytes.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# hyper backend
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true }
hyper-tls = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }

# reqwest backend
reqwest = { workspace = true, optional = true }

# optional (bedrock)
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
