[package]
name = "crabtalk-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP proxy server for crabtalk LLM gateway"
repository.workspace = true

[dependencies]
axum = { workspace = true }
crabtalk-core = { path = "../core" }
crabtalk-provider = { path = "../provider" }
futures = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
